--- a/FrontEnd/Auladia29deMaio/app2/src/App.css
+++ b/FrontEnd/Auladia29deMaio/app2/src/App.css
@@ -6,28 +6,28 @@
   background-color: rgb(24, 0, 241);
   display: flex;
   flex-direction: row;
-  border: 3px, solid , black;
+  /* border: 3px, solid , black; */
 }
 
 .flex1 , .flex2, .flex3{
   width: 100%;
   height: 100px;
-  border: 3px, solid , black;
+  /* border: 3px, solid , black; */
 }
 .flex4 {
   width: 150px;
   height: 50% ;
-  border: 2px, solid , black;
+  /* border: 2px, solid , black; */
 }
 .flex-1 , .flex-2 {
   width: 100%;
   height: 100px;
-  border: 3px, solid , black;
+  /* border: 3px, solid , black; */
 }
 .flexA1 , .flexA2, .flexA3 {
   width: 100%;
   height: 100px;
-  border: 3px, solid , black;
+  /* border: 3px, solid , black; */
 }
 
 .flex1{
