--- a/FrontEnd/Revisao/revisao/src/estilos/estilo.css
+++ b/FrontEnd/Revisao/revisao/src/estilos/estilo.css
@@ -2,6 +2,16 @@
 
 .cab_principal{
     display: flex;
+    width: 100%;
+    height: 150px;
+    background-color: rgb(131,130,189);
 }
 
 /*QUADRADO*/
+
+.quad_principal{
+    display: flex;
+    width: 150px;
+    height: 150px;
+    background-color: brown;
+}
