--- a/FrontEnd/Auladia29deMaio/app2/src/App.css
+++ b/FrontEnd/Auladia29deMaio/app2/src/App.css
@@ -1,70 +1,139 @@
-/*FLEX*/
+/* Reset de estilos e estilos gerais */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-.flex-conteiner,.flex-conteiner2, .flex-conteiner1{
-  width: 100%;
-  height: 100px;
-  background-color: rgb(24, 0, 241);
+/* Estilos do Navbar */
+.navbar {
+  background: linear-gradient(90deg, #00FFFF, rgb(0, 123, 255), rgb(100, 13, 173));
+  color: white;
   display: flex;
-  flex-direction: row;
-  /* border: 3px, solid , black; */
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
 }
 
-.flex1 , .flex2, .flex3{
-  width: 100%;
-  height: 100px;
-  /* border: 3px, solid , black; */
-}
-.flex4 {
-  width: 150px;
-  height: 50% ;
-  /* border: 2px, solid , black; */
-}
-.flex-1 , .flex-2 {
-  width: 100%;
-  height: 100px;
-  /* border: 3px, solid , black; */
-}
-.flexA1 , .flexA2, .flexA3 {
-  width: 100%;
-  height: 100px;
-  /* border: 3px, solid , black; */
+.navbar-brand {
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: white;
 }
 
-.flex1{
-  background-color: rgb(161, 161, 161);
-  flex: 10;
-  }
-  .flex2{
-    background-color:rgb(236, 70, 200);
-    flex: 1;
-  }
-  .flex3{
-    background-color:rgb(7, 139, 216);
-    flex: 1;
-  }
-  .flex4 {
-    background-color:rgb(169, 248, 12);
-    flex: 0.5;
-  }
+.nav-items {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
+.nav-item {
+  position: relative;
+}
 
-  .flex-1{
-    background-color: rgb(30, 255, 0);
-    flex: 0.1;
-    }
-    
+.nav-link {
+  text-decoration: none;
+  color: white;
+  padding: 10px 15px;
+}
 
-    
-  .flexA1{
-    background-color: rgb(161, 161, 161);
-    flex: 5;
-    }
-    .flexA2{
-      background-color:pink;
-      flex: 1;
-    }
-    .flexA3{
-      background-color: rgb(161, 161, 161);
-      flex: 5;
-      }
-    
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background: linear-gradient(90deg, rgb(0, 123, 255), rgb(100, 13, 173));
+  top: 100%;
+  left: 0;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  padding: 10px 0; /* Adicionei padding para separar os itens do menu */
+}
+
+.dropdown-item {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  color: white;
+}
+
+.nav-item:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-item:hover {
+  background: linear-gradient(90deg, #4DA9FF, #BF49C5);
+}
+
+/* Reset de estilos e estilos gerais */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+/* Estilos do Navbar */
+.navbar {
+  background: linear-gradient(90deg, #00FFFF, rgb(0, 123, 255), rgb(100, 13, 173));
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: white;
+}
+
+.nav-items {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-item {
+  position: relative;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: white;
+  padding: 10px 15px;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background: linear-gradient(90deg, rgb(0, 123, 255), rgb(100, 13, 173));
+  top: 100%;
+  left: 0;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  padding: 10px 0; /* Adicionei padding para separar os itens do menu */
+}
+
+.dropdown-item {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  color: white;
+}
+
+.nav-item:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-item:hover {
+  background: linear-gradient(90deg, #4DA9FF, #BF49C5);
+}
+
+.logo {
+  margin-right: 10px;
+  width: 100px; /* Ajuste conforme necessário */
+  height: auto;
+}
